--- a/secrets/index.html
+++ b/secrets/index.html
@@ -40,7 +40,10 @@
     };
     firebase.initializeApp(config);
 
-  // INITIALIZE RIOT
+    // Creates a globally accessible, observable object.
+    var observable = riot.observable();
+
+    // INITIALIZE RIOT
     riot.mount('*');
   </script>
 
